--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   "keywords": [
     "928BET","928เบท","บอลสด","ผลบอล","ถ่ายทอดสด","บอล","ฝากถอนไว","ไม่ผ่านเอเย่นต์"
   ],
-  "repository": "https://github.com/ambkingdom/2in2",
+  "repository": "https://github.com/wtharworn11/928BET",
   "license": "MIT",
   "engines": {
     "atom": ">=1.0.0 <2.0.0"
